# spikes

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE
rfc-0001/: Cargo.toml
rfc-0001/src/: lib.rs  type.rs  value.rs
rfc-0001/src/archetypes/: field_archetype.rs  mod.rs  object_archetype.rs  registry.rs
