[workspace]
members = [ "*" ]
exclude = [ ".git", ".vscode", "target" ]

[workspace.package]
readme = "README.md"
authors = [ "Nicolas Gryman <ngryman@gmail.com>" ]
repository = "https://github.com/goat-db/spikes.git"
homepage = "https://github.com/goat-db/spikes"
documentation = "https://docs.rs/spikes"
edition = "2021"

[workspace.dependencies]
chrono = "0.4.22"
uuid = { version = "1.2.1", features = [ "v4" ] }
