[package]
name = "rfc-0001"
version = "0.1.0"
readme = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
fxhash = "0.2.1"
scc = "0.11.2"
uuid = { workspace = true }
